more user feedback, better accesibility, placeholder when still loading current user so layout doesnt shift so much, fix layout shifting when clicking compute

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,7 +1,6 @@
 #main-wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: calc(100% - 64px);
     padding: 32px;
 }
