--- a/src/app/pages/app-main/app-main.component.scss
+++ b/src/app/pages/app-main/app-main.component.scss
@@ -2,6 +2,10 @@ mat-form-field {
     width: 100%;
 }
 
+#user-input {
+    height: 32px;
+}
+
 form {
     margin-bottom: 16px;
 }
